--- a/WebServicesFigaro/Views/PedidoMvc/Delete.cshtml
+++ b/WebServicesFigaro/Views/PedidoMvc/Delete.cshtml
@@ -83,6 +83,30 @@
             @Html.DisplayFor(model => model.Estado)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.FechaPedido)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FechaPedido)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TipoCocina)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TipoCocina)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.NombreChef)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.NombreChef)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
