--- a/WebServicesFigaro/Views/PedidoMvc/Index.cshtml
+++ b/WebServicesFigaro/Views/PedidoMvc/Index.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.Usuario.Nombre)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Zona.Titulo)
+            Zona
         </th>
         <th>
             @Html.DisplayNameFor(model => model.NPedido)
