--- a/Figaro/Figaro/Views/VerCarrito.xaml
+++ b/Figaro/Figaro/Views/VerCarrito.xaml
@@ -9,9 +9,9 @@
   <StackLayout Orientation="Vertical" Padding="0">
     <Grid Padding="20">
       <Grid.RowDefinitions>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition Height="Auto"/>
         <RowDefinition Height="*"/>
-        <RowDefinition Height="6*"/>
-        <RowDefinition Height="3*"/>
       </Grid.RowDefinitions>
 
       <StackLayout Orientation="Horizontal" Grid.Row="0">
@@ -20,60 +20,35 @@
       </StackLayout>
 
       <StackLayout Orientation="Vertical" Grid.Row="1">
-        <ListView x:Name="ListaMenus"
-                  ItemsSource="{Binding CarritoCompra.listaMenus}"
-		              HasUnevenRows="true"
-                  ItemTapped="Menu_OnItemTapped">
-          <ListView.ItemTemplate>
-            <DataTemplate>
-              <ViewCell>
-                <Grid>
-                  <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                  </Grid.ColumnDefinitions>
-                  <!--Cantidad-->
-                  <StackLayout Grid.Column="0" Orientation="Horizontal">
-                    <Label Text="{Binding Value}"/>
-                    <Label Text="-"/>
-                    <Label Text = "{Binding Key.Titulo}" />
-                  </StackLayout>
-                  <Label Text = "{Binding Key.HorasCocinado}" HorizontalOptions="End"  Grid.Column="2"/>
-                </Grid>
-              </ViewCell>
-            </DataTemplate>
-          </ListView.ItemTemplate>
-        </ListView>
-
-        <ListView x:Name="ListaPlatos"
-                  ItemsSource="{Binding CarritoCompra.listaPlatos}"
-		              HasUnevenRows="true"
-                  ItemTapped="Plato_OnItemTapped">
-          <ListView.ItemTemplate>
-            <DataTemplate>
-              <ViewCell>
-                <Grid>
-                  <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                  </Grid.ColumnDefinitions>
-                  <!--Cantidad-->
-                  <StackLayout Grid.Column="0" Orientation="Horizontal">
-                    <Label Text="{Binding Value}"  />
-                    <Label Text="-"/>
-                    <Label Text = "{Binding Key.Titulo}" />
-                  </StackLayout>
-                  <Label Text ="{Binding Key.HorasCocinado}" HorizontalOptions="End" Grid.Column="2"/>
-                </Grid>
-              </ViewCell>
-            </DataTemplate>
-          </ListView.ItemTemplate>
-        </ListView>
+          <ListView x:Name="ListaPlatosMenus"
+		                HasUnevenRows="true"
+                    ItemTapped="Menu_OnItemTapped"
+                    VerticalOptions="Start">
+            <ListView.ItemTemplate>
+              <DataTemplate>
+                <ViewCell>
+                  <Grid Margin="0,10">
+                    <Grid.ColumnDefinitions>
+                      <ColumnDefinition Width="Auto" />
+                      <ColumnDefinition Width="*" />
+                      <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <!--Cantidad-->
+                    <StackLayout Grid.Column="0" Orientation="Horizontal">
+                      <Image Source="minus.png" HeightRequest="16" />
+                      <Label Text="{Binding Value}" FontSize="16" Margin="10,0,0,0"/>
+                      <Label Text="-" FontSize="16"/>
+                      <Label Text = "{Binding Key.Titulo}" FontSize="16"/>
+                    </StackLayout>
+                    <Label Text = "{Binding Key.HorasCocinado}" HorizontalOptions="End"  Grid.Column="2"/>
+                  </Grid>
+                </ViewCell>
+              </DataTemplate>
+            </ListView.ItemTemplate>
+          </ListView>
       </StackLayout>
 
-      <StackLayout Orientation="Vertical" Grid.Row="2">
+      <StackLayout Orientation="Vertical" Grid.Row="2" VerticalOptions="Start">
         <Grid>
           <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -100,7 +75,7 @@
     </Grid>
 
     <Grid VerticalOptions="End" Padding="0,0,0,0"
-                 BackgroundColor="#ddd" HeightRequest="130">
+                 BackgroundColor="#ddd" HeightRequest="50">
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="Auto"/>
         <ColumnDefinition Width="*"/>
