--- a/WebServicesFigaro/Views/UsuarioMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/UsuarioMvc/Details.cshtml
@@ -103,6 +103,14 @@
             @Html.DisplayFor(model => model.genero)
         </dd>
 
+        <dt>
+            Chef Seleccionado
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ChefSeleccionado.Nombre)
+        </dd>
+
     </dl>
 </div>
 <p>
