--- a/WebServicesFigaro/Views/UsuarioMvc/Edit.cshtml
+++ b/WebServicesFigaro/Views/UsuarioMvc/Edit.cshtml
@@ -106,6 +106,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.ChefSeleccionadoId, "ChefSeleccionadoId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("ChefSeleccionadoId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ChefSeleccionadoId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
