Ver Pedidos Usuario, PedidoController arreglado

--- a/Figaro/Figaro/Views/ModoPago.xaml
+++ b/Figaro/Figaro/Views/ModoPago.xaml
@@ -39,8 +39,8 @@
     <Label Text="Pedido: " FontSize="18"/>
     
     <ScrollView>
-      <ListView x:Name="ListaMenus"
-                ItemsSource="{Binding CarritoCompra.listaMenus}"
+      <ListView x:Name="ListaPlatosMenus"
+                ItemsSource="{Binding ListaCarrito}"
 		            HasUnevenRows="true"
                 ItemTapped="Menu_OnItemTapped">
         <ListView.ItemTemplate>
