--- a/Figaro/Figaro/Views/MenuPage.xaml
+++ b/Figaro/Figaro/Views/MenuPage.xaml
@@ -8,23 +8,28 @@
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
              x:Name="menuPage"
              Title="Menús">
-  <StackLayout Orientation="Vertical">
-    
-    <Label x:Name="StatusMessage" Text="{Binding StatusMessage}" />
+  <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
     
     <ActivityIndicator IsRunning="{Binding IsBusy}"
-                       IsVisible="{Binding IsBusy}" />
-    
-    <ListView x:Name="ListaMenusView"
-              ItemsSource="{Binding ListaMenus}"
-		          HasUnevenRows="true"
-              ItemTapped="ListView_OnItemTapped"
-              HorizontalOptions="FillAndExpand">
-      <ListView.ItemTemplate>
-        <DataTemplate>
-           <ViewCell>
-             <StackLayout Orientation="Horizontal" Padding="12,6" >
-                <controls:CircleImage Source="{Binding Imagen}" WidthRequest="70.0" 
+                   IsVisible="{Binding IsBusy}"
+                   HeightRequest="50" WidthRequest="50"
+                   HorizontalOptions="Center" VerticalOptions="Center"/>
+
+    <StackLayout Orientation="Vertical"
+                  IsEnabled="{Binding IsIdle}" IsVisible="{Binding IsIdle}">
+
+      <Label x:Name="StatusMessage" Text="{Binding StatusMessage}" />
+
+      <ListView x:Name="ListaMenusView"
+                ItemsSource="{Binding ListaMenus}"
+                HasUnevenRows="true"
+                ItemTapped="ListView_OnItemTapped"
+                HorizontalOptions="FillAndExpand">
+        <ListView.ItemTemplate>
+          <DataTemplate>
+            <ViewCell>
+              <StackLayout Orientation="Horizontal" Padding="12,6" >
+                <controls:CircleImage Source="{Binding Imagen}" WidthRequest="70.0"
                                       HeightRequest="70.0" Aspect="AspectFill" />
                 <Grid Padding="10,0,0,0">
                   <Grid.RowDefinitions>
@@ -37,48 +42,49 @@
                     <ColumnDefinition Width="Auto"/>
                   </Grid.ColumnDefinitions>
                   <Label Text="{Binding Titulo}"
-                          FontSize="24" HorizontalOptions="Start" 
+                          FontSize="24" HorizontalOptions="Start"
                           Grid.Row="0"
                           Grid.Column="0"/>
-                  <Label Text="{Binding Descripcion}" 
+                  <Label Text="{Binding Descripcion}"
                           FontSize="18" HorizontalOptions="Start"
                           Opacity="0.6"
                           Grid.Row="1"
                           Grid.Column="0"/>
-                  <Label Text="{Binding PrecioEuros}" 
+                  <Label Text="{Binding PrecioEuros}"
                           FontSize="14" HorizontalOptions="End"
                           Opacity="0.6"
                           Grid.Row="0"
                           Grid.Column="2"/>
-                    <Button ClassId="{Binding Id}" BackgroundColor="#CC0311" Text="+" TextColor="White"
-                            FontSize="24" WidthRequest="10" 
-                            Grid.Row="1" Grid.Column="2"
-                            Clicked="AnadirCesta_OnClick"
+                  <Button ClassId="{Binding Id}" BackgroundColor="#CC0311" Text="+" TextColor="White"
+                          FontSize="24" WidthRequest="10"
+                          Grid.Row="1" Grid.Column="2"
+                          Clicked="AnadirCesta_OnClick"
                             />
                 </Grid>
-            </StackLayout>
-          </ViewCell>
-        </DataTemplate>
-      </ListView.ItemTemplate>
-    </ListView>
-    
-    <StackLayout HeightRequest="50" BackgroundColor="#ddd">
-      <Grid>
-        <Grid.ColumnDefinitions>
-          <ColumnDefinition Width="*"/>
-          <ColumnDefinition Width="*"/>
-          <ColumnDefinition Width="*"/>
-          <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Image x:Name="Menu_Button" Grid.Column="0" Source="icono_menu_select.png" 
-               HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
-        <Image x:Name="Plato_Button" Grid.Column="1" Source="icono_descubrir.png" 
-               HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
-        <Image x:Name="Chefs_Button" Grid.Column="2" Source="icon_chefs.png"
-               HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
-        <Image x:Name="Profile_Button" Grid.Column="3" Source="icono_profile.png"
-               HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
-      </Grid>
+              </StackLayout>
+            </ViewCell>
+          </DataTemplate>
+        </ListView.ItemTemplate>
+      </ListView>
+
+      <StackLayout HeightRequest="50" BackgroundColor="#ddd">
+        <Grid>
+          <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+          </Grid.ColumnDefinitions>
+          <Image x:Name="Menu_Button" Grid.Column="0" Source="icono_menu_select.png"
+                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+          <Image x:Name="Plato_Button" Grid.Column="1" Source="icono_descubrir.png"
+                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+          <Image x:Name="Chefs_Button" Grid.Column="2" Source="icon_chefs.png"
+                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+          <Image x:Name="Profile_Button" Grid.Column="3" Source="icono_profile.png"
+                 HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+        </Grid>
+      </StackLayout>
     </StackLayout>
-  </StackLayout>
+  </Grid>
 </ContentPage>
