Añadido indice menu y añadido AgignarDisponibilidad

--- a/WebServicesFigaro/Views/Home/Index.cshtml
+++ b/WebServicesFigaro/Views/Home/Index.cshtml
@@ -1,4 +1,47 @@
-﻿<div class="jumbotron">
+﻿<div class="row">
+    <div class="col-md-3">
+        <h3>@*@Html.ActionLink("Administrar Menus", "Index", "MenuMvc")*@</h3>
+        <h3><a href="/MenuMvc" class="btn btn-primary btn-lg">Administrar menus &raquo;</a></h3>
+    </div>
+    <div class="col-md-3">
+        <h3><a href="/PlatoMvc" class="btn btn-primary btn-lg">Administrar platos &raquo;</a></h3>
+    </div>
+    <div class="col-md-3">
+        <h3><a href="/ChefMvc" class="btn btn-primary btn-lg">Administrar chefs &raquo;</a></h3>
+    </div>
+    <div class="col-md-3">
+        <h3><a href="/UsuarioMvc" class="btn btn-primary btn-lg">Administrar usuarios &raquo;</a></h3>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-3">
+        <h3><a href="/PedidoMvc" class="btn btn-primary btn-lg">Administrar pedidos &raquo;</a></h3>
+    </div>
+    <div class="col-md-3">
+        <h3><a href="/MenuPedidoMvc" class="btn btn-primary btn-lg">Administrar MenusPedidos &raquo;</a></h3>
+    </div>
+    <div class="col-md-3">
+        <h3><a href="/PlatoPedidoMvc" class="btn btn-primary btn-lg">Administrar PlatosPedidos &raquo;</a></h3>
+    </div>
+    <div class="col-md-3">
+        <h3><a href="/AsignarDisponibilidad" class="btn btn-primary btn-lg">Administrar Disponibilidades Chefs &raquo;</a></h3>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-3">
+        <h3><a href="/PedidoMvc" class="btn btn-primary btn-lg">Administrar Menus Carrito &raquo;</a></h3>
+    </div>
+    <div class="col-md-3">
+        <h3><a href="/MenuPedidoMvc" class="btn btn-primary btn-lg">Administrar Platos Carrito &raquo;</a></h3>
+    </div>
+    <div class="col-md-3">
+        <h3><a href="/ZonaMvc" class="btn btn-primary btn-lg">Administrar Zonas &raquo;</a></h3>
+    </div>
+    <div class="col-md-3">
+        <h3><a href="/GeoPC_PlaceMvc" class="btn btn-primary btn-lg">Administrar CodigosPostales Zonas &raquo;</a></h3>
+    </div>
+</div>
+@*<div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
@@ -21,4 +64,4 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
     </div>
-</div>
+</div>*@
