--- a/WebServicesFigaro/Views/Shared/_Layout.cshtml
+++ b/WebServicesFigaro/Views/Shared/_Layout.cshtml
@@ -7,6 +7,10 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Scripts/jquery-ui.min.js")
+    <link href="@Url.Content("/Content/jquery-ui.min.css")" rel="stylesheet" type="text/css" />
 </head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <body>
@@ -36,8 +40,6 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
