Limitación de poder añadir platos y menus del tipoCocina correspondiente al carrito

--- a/Figaro/Figaro/Views/UserPage.xaml
+++ b/Figaro/Figaro/Views/UserPage.xaml
@@ -40,7 +40,9 @@
 
         </StackLayout>
       </ScrollView>
-      <StackLayout HeightRequest="50" BackgroundColor="#ddd">
+      <StackLayout VerticalOptions="EndAndExpand">
+      </StackLayout>
+      <StackLayout HeightRequest="50" BackgroundColor="#ddd" VerticalOptions="End">
         <Grid>
           <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
