--- a/WebServicesFigaro/Views/UsuarioMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/UsuarioMvc/Details.cshtml
@@ -111,6 +111,14 @@
             @Html.DisplayFor(model => model.ChefSeleccionado.Nombre)
         </dd>
 
+        <dt>
+            Tipo Cocina Seleccionado
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TipoCocina.Titulo)
+        </dd>
+
     </dl>
 </div>
 <p>
